@@ -655,6 +655,7 @@ Jeremy Hylton
 Ludwig Hähne
 Gerhard Häring
 Fredrik Håård
+Florian Höch
 Catalin Iacob
 Mihai Ibanescu
 Ali Ikinci
